--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["Dave O <davidobrite@gmail.com>"]
 [dependencies]
 rand = "0.3.15"
 rustbox = "0.9.0"
+yoga = { git = "https://github.com/dobrite/yoga-rs.git" }
 yoga-wrapper = { git = "https://github.com/dobrite/yoga-wrapper-rs.git" }
